Смотри в коробку Сёгун искусно сложил Гвозди и книги