@@ -8,11 +8,11 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <!-- Java 22 -->
-        <maven.compiler.release>22</maven.compiler.release>
+        <!-- Java 25 -->
+        <maven.compiler.release>25</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>22</maven.compiler.source>
-        <maven.compiler.target>22</maven.compiler.target>
+        <maven.compiler.source>25</maven.compiler.source>
+        <maven.compiler.target>25</maven.compiler.target>
         <!-- версии плагинов -->
         <maven.compiler.plugin.version>3.12.1</maven.compiler.plugin.version>
         <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
@@ -52,13 +52,16 @@
         <testSourceDirectory>src/test/java</testSourceDirectory>
 
         <plugins>
-            <!-- Компилятор (Java 22) -->
+            <!-- Компилятор (Java 25) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.plugin.version}</version>
                 <configuration>
                     <release>${maven.compiler.release}</release>
+                    <source>22</source>
+                    <target>22</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
 
